Modularised entire project
Added support for add command
Formating of JSON while saving.
Introduced the runtime configuration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "go build  -o out/ ${file}",
+            "command": "go install",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
