--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,11 @@ jobs:
 
     - name: Test
       run: go test -v .
+      
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: shell-butler-linux
+        # A file, directory or wildcard pattern that describes what to upload
+        path: ./shell-butler
